--- a/app/src/main/res/layout/activity_add_message.xml
+++ b/app/src/main/res/layout/activity_add_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="6dp"
-    tools:context=".AddMessageActivity">
+    tools:context=".SplashActivity$AddMessageActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
