--- a/app/src/main/res/layout/activity_add_series.xml
+++ b/app/src/main/res/layout/activity_add_series.xml
@@ -6,67 +6,66 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="6dp"
-    tools:context=".messages.AddMessagesActivity">
+    tools:context=".series.AddSeriesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:text="Name"
-            android:textColor="#130909"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/name_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:text="PhoneNumber"
+            android:text="SeriesId"
             android:textColor="#000000"
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/phone_txt"
+            android:id="@+id/series_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:text="Message"
-            android:textColor="#000000"
+            android:layout_margin="6dp"
+            android:text="Series Name"
+            android:textColor="#050404" />
+
+        <EditText
+            android:id="@+id/series_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:text="ImageUrl"
+            android:textColor="#020101"
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/messages_txt"
+            android:id="@+id/series_imgurl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="6dp"
             android:ems="10"
             android:inputType="textPersonName" />
+
     </LinearLayout>
 
     <Button
-        android:id="@+id/add_btn"
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add"
