--- a/app/src/main/res/layout/activity_add_template.xml
+++ b/app/src/main/res/layout/activity_add_template.xml
@@ -28,8 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:inputType="textPersonName" />
     </LinearLayout>
 
     <Button
