--- a/app/src/main/res/layout/activity_add_series.xml
+++ b/app/src/main/res/layout/activity_add_series.xml
@@ -65,7 +65,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add"
