--- a/app/src/main/res/layout/activity_template.xml
+++ b/app/src/main/res/layout/activity_template.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="templates.TemplateActivity">
+    tools:context="templates.TemplatesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/template_rcv"
