--- a/app/src/main/res/layout/activity_add_template.xml
+++ b/app/src/main/res/layout/activity_add_template.xml
@@ -35,7 +35,7 @@
         android:id="@+id/add_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="add"
+        android:text="Add"
         android:textAllCaps="false" />
 
 </LinearLayout>
