--- a/app/src/main/res/layout/activity_series.xml
+++ b/app/src/main/res/layout/activity_series.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="6dp"
-    tools:context=".series.SeriesListActivity">
+    tools:context=".series.SeriesItemsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
