--- a/app/src/main/res/layout/activity_add_series.xml
+++ b/app/src/main/res/layout/activity_add_series.xml
@@ -23,7 +23,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/series_id"
+            android:id="@+id/series_id_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -38,7 +38,7 @@
             android:textColor="#050404" />
 
         <EditText
-            android:id="@+id/series_name"
+            android:id="@+id/series_name_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
@@ -55,7 +55,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/series_imgurl"
+            android:id="@+id/series_imgurl_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
