--- a/app/src/main/res/layout/series_item.xml
+++ b/app/src/main/res/layout/series_item.xml
@@ -24,6 +24,7 @@
             android:layout_width="332dp"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
+            android:gravity="center"
             android:text="TextView"
             android:textColor="#000000"
             android:textSize="20sp" />
