created a methods for views and save message in add message activity

--- a/app/src/main/res/layout/activity_add_message.xml
+++ b/app/src/main/res/layout/activity_add_message.xml
@@ -57,7 +57,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/messages_txt"
+            android:id="@+id/messages_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
