--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -37,7 +37,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/messages_txt"
+            android:id="@+id/messages_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
