--- a/app/src/main/res/layout/activity_quotes.xml
+++ b/app/src/main/res/layout/activity_quotes.xml
@@ -17,6 +17,7 @@
         android:id="@+id/add_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="#228EE4"
         android:text="Add"
         android:textAllCaps="false" />
 </LinearLayout>
