--- a/app/src/main/res/layout/activity_add_quotes.xml
+++ b/app/src/main/res/layout/activity_add_quotes.xml
@@ -42,7 +42,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/author_txt"
+            android:id="@+id/authorname_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
@@ -76,7 +76,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/quote_imgurl"
+            android:id="@+id/quote_image_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
@@ -86,11 +86,17 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="#03A9F4"
         android:text="Add"
         android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Edit" />
 
 </LinearLayout>
