--- a/app/src/main/res/layout/quotes_item.xml
+++ b/app/src/main/res/layout/quotes_item.xml
@@ -26,14 +26,27 @@
         android:text="TextView"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/authorname_txt"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="#020101"
-        android:textSize="16sp" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/authorname_txt"
+            android:layout_width="348dp"
+            android:layout_height="33dp"
+            android:layout_margin="6dp"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="#020101"
+            android:textSize="16sp" />
+
+        <ImageButton
+            android:id="@+id/delete_btn"
+            android:layout_width="36dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_cancel_24" />
+    </LinearLayout>
 
 </LinearLayout>
