--- a/app/src/main/res/layout/activity_add_message.xml
+++ b/app/src/main/res/layout/activity_add_message.xml
@@ -71,12 +71,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/edit_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit" />
+        android:text="Edit"
+        android:visibility="gone" />
 
 </LinearLayout>
