--- a/app/src/main/res/layout/activity_add_series.xml
+++ b/app/src/main/res/layout/activity_add_series.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="6dp"
-    tools:context=".series.AddSeriesItemActivity">
+    tools:context=".series.BaseAddEditSeriesItemActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,12 +69,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/edit_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit" />
+        android:text="Edit"
+        android:visibility="gone" />
 
 </LinearLayout>
