--- a/app/src/main/res/layout/activity_add_template.xml
+++ b/app/src/main/res/layout/activity_add_template.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="templates.AddTemplateActivity">
+    tools:context="templates.BaseAddEditTemplatesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
