--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -92,11 +92,12 @@
             android:textColor="#000000"
             android:textSize="16sp" />
 
-        <Spinner
-            android:id="@+id/description_sp"
+        <EditText
+            android:id="@+id/descripition_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp" />
+            android:ems="10"
+            android:inputType="textPersonName" />
 
     </LinearLayout>
 
